--- a/config/config.json
+++ b/config/config.json
@@ -6,5 +6,10 @@
     "host": "127.0.0.1",
     "dialect": "postgres",
     "logging": false
+  },
+
+  "jwt": {
+    "secret": "secret key for JWT",
+    "expiresIn": "1h"
   }
 }
