instal lib and config

--- a/config/config.json
+++ b/config/config.json
@@ -11,5 +11,9 @@
   "jwt": {
     "secret": "secret key for JWT",
     "expiresIn": "1h"
+  },
+
+  "cors": {
+    "siteAdress": "http://localhost:3000"
   }
 }
