--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "learnexpress",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon app.js",
+    "dev": "nodemon app.js",
     "migrate": "sequelize db:migrate"
   },
   "keywords": [],
