--- a/config/config.json
+++ b/config/config.json
@@ -10,8 +10,16 @@
 
   "jwt": {
     "secret": "secret key for JWT",
-    "accessTokenExpiresIn": 120,
-    "refreshTokenExpiresIn": "1h"
+    "tokens": {
+      "access": {
+        "type": "access",
+        "expiresIn": "2m"
+      },
+      "refresh": {
+        "type": "refresh",
+        "expiresIn": "1h"
+      }
+    }
   },
 
   "cors": {
