--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0"
