--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,8 @@
     "username": "fusion",
     "password": "fusion",
     "database": "bstore",
-    "host": "127.0.0.1",
+    "host": "3.12.228.201",
+    "port": 5433,
     "dialect": "postgres",
     "logging": false
   },
