--- a/config/config.json
+++ b/config/config.json
@@ -3,6 +3,8 @@
     "username": "fusion",
     "password": "fusion",
     "database": "bstore",
+    "host": "http://3.12.228.201",
+    "port": 5433,
     "dialect": "postgres",
     "logging": false
   },
