--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
     "username": "fusion",
     "password": "fusion",
     "database": "bstore",
-    "host": "localhost",
+    "host": "0.0.0.0",
     "port": 5433,
     "dialect": "postgres",
     "logging": false
