--- a/config/config.json
+++ b/config/config.json
@@ -3,8 +3,8 @@
     "username": "fusion",
     "password": "fusion",
     "database": "bstore",
-    "host": "localhost",
-    "port": 5433,
+    "host": "127.0.0.1",
+    "port": 5432,
     "dialect": "postgres",
     "logging": false
   },
